# Nexus

./: .gitattributes  .gitignore  AGENTS.md  CONFIGURATION.md  LICENSE  README.md  docker-compose.multi-tenant.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
apps/api/: package.json  tsconfig.json
apps/api/src/: approval.ts  botConfig.test.ts  botConfig.ts  botRoute.test.ts  botRoute.ts  compactRoute.ts  config.test.ts  config.ts  http.ts  keysEnvVars.test.ts  mcp.test.ts  mcp.ts  server.ts  serverStructure.test.ts  shutdown.ts  skills.test.ts  skills.ts  threadChildren.test.ts  threadChildren.ts  threadMetadata.test.ts  threadMetadata.ts  threadTitle.ts  turnInput.ts  usage.test.ts  usage.ts  workspaceFiles.test.ts  workspaceFiles.ts  workspacePicker.ts
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app.rs  main.rs
apps/web/: package.json  tsconfig.json  vite.config.ts
docs/: runtime-middleware.md
docs/previews/: settings-redesign-implementation-contract.md  settings-redesign-preview.html
docs/releases/: v1.2.0.md
scripts/: check-source-artifacts.mjs  dev.mjs  link-workspaces.mjs  start-desktop.mjs  start.mjs
skills/data-analysis/: SKILL.md
skills/dingtalk-group-forwarding/: SKILL.md
tests/: package.json  tsconfig.json
tests/scripts/: check-source-artifacts.test.ts
(+342 files in other folders)
